clean metadata's tags

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -7,17 +7,19 @@
       "source": [
         "# \u6b22\u8fce\u8bed\n",
         "\u66f4\u65b0\u65e5\u5fd7"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
       "id": "83025d61-3547-416b-a519-bad97f36f915",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "# \u57fa\u7840\u914d\u7f6e"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -26,8 +28,7 @@
       "metadata": {
         "jupyter": {
           "source_hidden": true
-        },
-        "tags": []
+        }
       },
       "outputs": [],
       "source": [
@@ -54,21 +55,19 @@
     {
       "cell_type": "markdown",
       "id": "a586155e-1ce7-4cb9-b94e-c044fd85e15f",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-plane-departure\"></i> \u5b66\u672f\u52a0\u901f\n",
         "\u9996\u5148\u8981\u8fdb\u884c\u5b66\u672f\u52a0\u901f\uff0c\u8fd9\u6709\u5229\u4e8e\u62c9\u53d6\u8d44\u6e90\uff0c\u8be6\u60c5\u8bf7\u770b\uff1ahttps://www.autodl.com/docs/network_turbo/  "
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import sys\n",
@@ -86,7 +85,9 @@
       "source": [
         "## <i class=\"fa fa-star\"></i> Notebook\u73af\u5883\u5207\u6362\n",
         "\u5728JupyterLab\u7684Notebook\u4e2d\u4f7f\u7528\u65b0\u7684Conda\u73af\u5883"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -95,8 +96,7 @@
       "metadata": {
         "jupyter": {
           "source_hidden": true
-        },
-        "tags": []
+        }
       },
       "outputs": [],
       "source": [
@@ -136,12 +136,12 @@
     {
       "cell_type": "markdown",
       "id": "3e392e78-580b-4d14-9fd7-26bcb2fdca7e",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-download\"></i> \u66f4\u65b0\u672c\u4f53\u4e0e\u73af\u5883"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -149,7 +149,9 @@
       "metadata": {},
       "source": [
         "\u66f4\u65b0Stable-diffusion-WebUI\u672c\u4f53\u4e0e\u73af\u5883\u547d\u4ee4"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -159,8 +161,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -244,32 +245,30 @@
     {
       "cell_type": "markdown",
       "id": "bb636268-b393-48f2-81a7-4059b0ab8678",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-bolt\"></i> \u5b89\u88c5Xformers"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
       "id": "dfb660d1-1354-4604-9952-47421f256b5c",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "\u5927\u5e45\u51cf\u5c11\u8ba1\u7b97\u65f6\u95f4\u548c\u663e\u5b58\u5360\u7528\uff0c\u4ee3\u4ef7\u662f\u751f\u6210\u7684\u56fe\u6bcf\u4e2a\u90fd\u6709\u70b9\u53d8\u5316\uff0c\u5f3a\u70c8\u63a8\u8350\u5b89\u88c5!  \n",
         "\u4f46\u4e0d\u540c\u6838\u5fc3\u4ee3\u53f7\u7684\u663e\u5361\u9700\u8981\u4e0d\u540c\u7684\u7f16\u8bd1\u5305\uff0c\u4e0d\u80fd\u6df7\u7528  \n",
         "\u5f53\u7136\u6b64\u7b14\u8bb0\u4f1a\u5e2e\u4f60\u81ea\u52a8\u68c0\u6d4b\u8fd9\u53f0\u673a\u5668\u662f\u5426\u9002\u5408\u5b89\u88c5\uff0c\u800c\u4e14\u4f1a\u81ea\u52a8\u5e2e\u4f60\u5b89\u88c5\u5408\u9002\u7684\u7f16\u8bd1\u5305"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -293,12 +292,12 @@
     {
       "cell_type": "markdown",
       "id": "7dfc12ac-31ff-47d5-8b0a-db537b198ed4",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-language\"></i> \u5b89\u88c5\u4e2d\u6587\u8bed\u8a00\u5305"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -308,8 +307,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -326,12 +324,12 @@
     {
       "cell_type": "markdown",
       "id": "8f07ab33-d922-49f0-bb1c-7a2affbbd92c",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-images\"></i> \u5b89\u88c5\u56fe\u5e93\u6d4f\u89c8\u5668"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -341,8 +339,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -362,15 +359,15 @@
       "metadata": {},
       "source": [
         "# <i class=\"fa fa-rocket\"></i> \u542f\u52a8Stable-Diffusion-WebUI"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
