--- a/tools/complier_tools/xformersCompileHelper.ipynb
+++ b/tools/complier_tools/xformersCompileHelper.ipynb
@@ -33,9 +33,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "4ca5d576-c95f-493b-8cf5-3fc8753a7439",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "# \u6700\u540e\uff0c\u4f7f\u7528 git \u514b\u9686\u6b64\u5b58\u50a8\u5e93\u5e76\u8fdb\u884c\u7f16\u8bd1\uff1a\n",
@@ -54,8 +52,7 @@
       "execution_count": null,
       "id": "23afda52-c620-491a-9d19-3fd18f2a082e",
       "metadata": {
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -71,9 +68,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "ec613986-97fd-468b-9b99-b06c0e610afc",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "# \u91cd\u542f\u5185\u6838\u540e\uff0c\u9a8c\u8bc1xformers\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\u6210\u529f\n",
@@ -85,9 +80,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "88f0b852-e361-4449-9526-043993080d39",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "# \u4f7f\u7528Wheel\u6765\u8fdb\u884c\u5b89\u88c5\uff08\u8def\u5f84\u53ef\u80fd\u6709\u66f4\u6539\uff09\n",
@@ -98,9 +91,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "fb47bce3-30fa-4a7c-919d-1d2cf11dc7b4",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!pip uninstall -y xformers"
@@ -110,9 +101,7 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "87b9ace9-840a-4d2c-bc7d-08a5eb28fa1d",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!pip install xformers==0.0.16rc392\n",
