--- a/tools/others/installOneClick-stable-diffusion.ipynb
+++ b/tools/others/installOneClick-stable-diffusion.ipynb
@@ -3,13 +3,13 @@
     {
       "cell_type": "markdown",
       "id": "f096a789-147c-4347-a407-2d4cf737c799",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-plane-departure\"></i> \u5b66\u672f\u52a0\u901f\n",
         "\u9996\u5148\u8981\u8fdb\u884c\u5b66\u672f\u52a0\u901f\uff0c\u8fd9\u6709\u5229\u4e8e\u62c9\u53d6\u8d44\u6e90\uff0c\u8be6\u60c5\u8bf7\u770b\uff1ahttps://www.autodl.com/docs/network_turbo/  "
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -18,8 +18,7 @@
       "metadata": {
         "jupyter": {
           "source_hidden": true
-        },
-        "tags": []
+        }
       },
       "outputs": [],
       "source": [
@@ -201,12 +200,12 @@
     {
       "cell_type": "markdown",
       "id": "66978fd1-7b2a-4a78-9516-3afb4ff6a41a",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-download\"></i> \u5b89\u88c5\u6216\u66f4\u65b0"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -214,7 +213,9 @@
       "metadata": {},
       "source": [
         "\u5b89\u88c5\u6216\u66f4\u65b0OneClick-stale-diffusion\u672c\u4f53"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -224,8 +225,7 @@
         "jupyter": {
           "source_hidden": true
         },
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
