--- a/tools/others/notebookHub.ipynb
+++ b/tools/others/notebookHub.ipynb
@@ -3,21 +3,19 @@
     {
       "cell_type": "markdown",
       "id": "93ba28fb-8b2f-4232-a02e-579fe4180adf",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "# <i class=\"fa fa-plane-departure\"></i> \u5b66\u672f\u52a0\u901f\n",
         "\u9996\u5148\u8981\u8fdb\u884c\u5b66\u672f\u52a0\u901f\uff0c\u8fd9\u6709\u5229\u4e8e\u62c9\u53d6\u8d44\u6e90\uff0c\u8be6\u60c5\u8bf7\u770b\uff1ahttps://www.autodl.com/docs/network_turbo/  "
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "2b9c8fe4-ab0e-43e3-9983-9487044b951b",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "from func.env import setProxy\n",
@@ -29,12 +27,12 @@
     {
       "cell_type": "markdown",
       "id": "bf2f7d90-a0df-4c49-9eea-38063b0caad1",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "# <i class=\"fa fa-download\"></i> \u66f4\u65b0"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -42,15 +40,16 @@
       "metadata": {},
       "source": [
         "\u66f4\u65b0OneClick-stale-diffusion\u672c\u4f53"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "eff3185f-7c98-4f0a-a641-7ae7f4731f8e",
       "metadata": {
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -65,15 +64,15 @@
       "metadata": {},
       "source": [
         "# <i class=\"fa fa-list\"></i> \u6240\u6709\u811a\u672c\u5217\u8868"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "7556bfc0-c3b3-42fd-bc19-6a262252444d",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "from ipywidgets import interact, widgets\n",
