--- a/dreambooth/fixDreamBooth-Notebook-for-AutoDL.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-AutoDL.ipynb
@@ -6,7 +6,9 @@
       "metadata": {},
       "source": [
         "# Colab\u7684\u9ed8\u8ba4\u73af\u5883\u8ddf\u8fd9\u91cc\u7684\u9ed8\u8ba4\u73af\u5883\u6709\u5dee\u5f02\uff0c\u9700\u8981\u5b89\u88c5\u989d\u5916\u7684\u4f9d\u8d56"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -35,8 +37,7 @@
       "execution_count": null,
       "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
       "metadata": {
-        "scrolled": true,
-        "tags": []
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -66,15 +67,15 @@
       "metadata": {},
       "source": [
         "# \u914d\u7f6eaccelerate"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!chmod +x ./accelerate.sh\n",
@@ -84,20 +85,18 @@
     {
       "cell_type": "markdown",
       "id": "df462c9a-eb68-4fe9-85ff-37ef243442a6",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "# \u521b\u5efaTemp\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7dfast-DreamBooth.ipynb\u5230Temp\u76ee\u5f55\u4e0b"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!pip install wget \n",
@@ -164,15 +163,15 @@
       "metadata": {},
       "source": [
         "# \u521b\u5efaContent\u6587\u4ef6\u5939"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "0d2db384-8a43-4650-be96-af090b779f06",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -255,15 +254,15 @@
       "metadata": {},
       "source": [
         "# \u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08\u8f6f\u94fe\u63a5\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -343,15 +342,15 @@
       "metadata": {},
       "source": [
         "# \u5b89\u88c5Diffusers"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!. activate && conda activate py3.10.6 && \\\n",
@@ -368,15 +367,15 @@
       "metadata": {},
       "source": [
         "# \u6e05\u7406Notebook\u4e2d\u7684\u8f93\u51fa\uff0c\u5bf9Colab\u7248\u4e2d\u7684\u8def\u5f84\u8fdb\u884c\u66ff\u6362\uff0c\u4ee5\u9002\u5e94openbayes\u6216autodl\u7684\u8def\u5f84"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "73aec890-1745-4f77-b3bc-af98d1726554",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
@@ -541,15 +540,15 @@
       "metadata": {},
       "source": [
         "# \u5bf9\u6307\u5b9a\u7684\u53d8\u91cf\u540d\u8fdb\u884c\u5b57\u7b26\u4e32\u548c\u53c2\u6570\u7684\u66ff\u6362"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
@@ -625,15 +624,15 @@
       "metadata": {},
       "source": [
         "# \u68c0\u67e5\u6700\u7ec8\u7248\u672c\u7684ipynb\u91cc\u9762\u7684\u8d4b\u503c\u60c5\u51b5"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
