--- a/ipynb/OneClick-install-extensions.ipynb
+++ b/ipynb/OneClick-install-extensions.ipynb
@@ -7,26 +7,27 @@
       "source": [
         "# \u4e00\u952e\u5b89\u88c5\u62d3\u5c55\n",
         "\u5f25\u8865Stable Diffusion WebUI\u5f00\u542f\u4e86--share\u4e4b\u540e\uff0c\u4e0d\u80fd\u76f4\u63a5\u5728\u5e94\u7528\u4e2d\u8fdb\u884c\u62d3\u5c55\u5b89\u88c5\u7684\u7f3a\u9677"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
       "id": "e8ece6d4-3423-4815-bff9-e5ed9d3b35d6",
       "metadata": {
-        "jp-MarkdownHeadingCollapsed": true,
-        "tags": []
+        "jp-MarkdownHeadingCollapsed": true
       },
       "source": [
         "## <i class=\"fa fa-palette\"></i> \u4e0b\u8f7d\u4e2a\u4eba\u6574\u7406\u7684Style\uff08\u53ef\u9009\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "03beeabc-da55-47bb-95ef-9675127ee7ca",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -95,20 +96,18 @@
     {
       "cell_type": "markdown",
       "id": "b2b6b189-6748-4b64-a9f5-aa5df2eca3af",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## \u5b89\u88c5depthmap2mask\uff08\u6df1\u5ea6\u56fe\u906e\u7f69\uff09\u62d3\u5c55\uff08\u53ef\u9009\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "4d19aa84-c880-436e-a082-4c785f7d97a4",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -127,15 +126,15 @@
       "metadata": {},
       "source": [
         "## \u5b89\u88c5\u9ad8\u5206\u8fa8\u7387\u4fee\u590d\u539f\u56fe\u8c03\u8282\u62d3\u5c55\uff08\u53ef\u9009\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "af86bebd-53c3-4e62-ab28-5ff740deb418",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -151,20 +150,18 @@
     {
       "cell_type": "markdown",
       "id": "f4da2910-02c8-4a18-9569-da8f6d0f54f4",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## <i class=\"fa fa-bed\"></i> \u5b89\u88c5Dreambooth\u62d3\u5c55\uff08\u53ef\u9009\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "0e8993e1-9e76-458c-8fd5-f2bf27ee841c",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
@@ -181,20 +178,18 @@
     {
       "cell_type": "markdown",
       "id": "d654dd23-375f-486b-92fd-eaae7986a2b8",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "## \u5b89\u88c5SD-latent-mirroring\uff08\u955c\u50cf\u6f5c\u7a7a\u95f4\u56fe\u50cf\uff09\u62d3\u5c55\uff08\u53ef\u9009\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "51b17a60-fdfc-4a0a-83a7-441ec260e11d",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os,sys\n",
