--- a/init.ipynb
+++ b/init.ipynb
@@ -2,13 +2,66 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "9ae2bec1-905b-48dc-b818-3af253756c40",
+      "metadata": {},
+      "source": [
+        "# \u5b89\u88c5\u5fc5\u8981\u7684\u4f9d\u8d56"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "92e7a159-d9b4-4de0-9f05-b48341306b51",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import subprocess\n",
+        "\n",
+        "libraries_to_install = [\n",
+        "\n",
+        "]\n",
+        "\n",
+        "tools_to_install = [\n",
+        "    \"iputils-ping\",\n",
+        "]\n",
+        "\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "\n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "for library in libraries_to_install:\n",
+        "    if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        continue\n",
+        "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "        !pip install $library\n",
+        "    else:\n",
+        "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "        \n",
+        "# \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "update_needed = False\n",
+        "for tool in tools_to_install:\n",
+        "    exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "    if exit_code != 0:\n",
+        "        update_needed = True\n",
+        "        break\n",
+        "    else:\n",
+        "        print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "if update_needed:\n",
+        "    !apt-get update\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            !apt-get install -y $tool\n",
+        "    \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "734dcb25-c750-41b7-a776-5519e71fedd6",
       "metadata": {},
       "source": [
         "# \u628atools/git_tools\u4e2d\u7684git.py\u590d\u5236\u4e00\u4efd\u5230OneClick-stable-diffusion\u6587\u4ef6\u5939\u540c\u7ea7\u76ee\u5f55\u4e0b"
-      ],
-      "outputs": [],
-      "execution_count": null
+      ]
     },
     {
       "cell_type": "code",
