fix bug and add launch ipynb

--- a/ipynb/invokeai/OneClick-install-invokeai.ipynb
+++ b/ipynb/invokeai/OneClick-install-invokeai.ipynb
@@ -125,12 +125,153 @@
         "    else:\n",
         "        print('\u5df2\u7ecf\u5b58\u5728\u540d\u4e3ainvokeai\u7684\u865a\u62df\u73af\u5883')\n",
         "        # conda\u6fc0\u6d3binvokeai\u73af\u5883\uff0c\u4e14\u8fd0\u884c\u914d\u7f6e.py\u6587\u4ef6\n",
-        "        \n",
-        "        # !$proxy &&\\\n",
-        "        # source activate &&\\\n",
-        "        # conda activate invokeai &&\\\n",
-        "        # cd $invokeai_dir &&\\\n",
-        "        # python scripts/configure_invokeai.py -y"
+        "        !$proxy &&\\\n",
+        "        source activate &&\\\n",
+        "        conda activate invokeai &&\\\n",
+        "        cd $invokeai_dir &&\\\n",
+        "        python scripts/configure_invokeai.py -y"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "73c6ec3d-053b-4b34-8c44-d9b16cf6a5f9",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-wrench\"></i> \u5b89\u88c5 PyPatchMatch\n",
+        "pypatchmatch \u662f\u4e00\u4e2a\u7528\u4e8e\u4fee\u590d\u56fe\u50cf\u7684 Python \u6a21\u5757\u3002\u4e0d\u9700\u8981\u8fd0\u884cInvokeAI\uff0c\u4f46\u5b83\u5927\u5927\u63d0\u9ad8\u4e86\u4fee\u590d\u548c\u4fee\u590d\u7684\u8d28\u91cf\uff0c\u63a8\u8350\u4f7f\u7528\u3002\n",
+        "\u4e0d\u5e78\u7684\u662f\uff0c\u5b83\u662f\u4e00\u4e2a C++ \u4f18\u5316\u6a21\u5757\uff0c\u5b89\u88c5\u53ef\u80fd\u6709\u4e9b\u56f0\u96be\u3002\u672c\u6307\u5357\u5c06\u5f15\u5bfc\u60a8\u5b8c\u6210\u8fd9\u4e9b\u6b65\u9aa4\u3002\n",
+        "\u539f\u6587\u5730\u5740:https://invoke-ai.github.io/InvokeAI/installation/060_INSTALL_PATCHMATCH/#macintosh"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3bbd8f7e-b7ef-4bd0-94b7-f3bd4bdbbb01",
+      "metadata": {},
+      "source": [
+        "### \u5b89\u88c5\u5fc5\u8981\u5de5\u5177"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8ce0894f-0bf1-4b49-9430-d60007baecf3",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "base_args = [\n",
+        "    proxy,'&&',\n",
+        "    'source activate','&&',\n",
+        "    'conda activate invokeai','&&',\n",
+        "    f'cd {invokeai_dir}','&&'\n",
+        "]\n",
+        "\n",
+        "def check_patchmatch_installed():\n",
+        "    install_pypatch_args = base_args[:] + [\n",
+        "        'python -c \"from patchmatch import patch_match as pm;print(pm.patchmatch_available)\"'\n",
+        "    ]\n",
+        "    install_pypatch_cmd = (\" \").join(install_pypatch_args)\n",
+        "    pypatch_cb = !$install_pypatch_cmd\n",
+        "    if pypatch_cb[0] != 'True':\n",
+        "        print('pypatchmatch\u8fd8\u6ca1\u5b89\u88c5\uff0c\u5373\u5c06\u5b89\u88c5')\n",
+        "        return False\n",
+        "    else:\n",
+        "        print('pypatchmatch\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5')\n",
+        "        return True\n",
+        "\n",
+        "patchmatch_installed = False\n",
+        "patchmatch_installed = check_patchmatch_installed()\n",
+        "print(patchmatch_installed)\n",
+        "\n",
+        "if not patchmatch_installed:\n",
+        "    import subprocess\n",
+        "\n",
+        "    libraries_to_install = [\n",
+        "    ]\n",
+        "\n",
+        "    tools_to_install = [\n",
+        "        'build-essential',\n",
+        "        'python3-opencv',\n",
+        "        'libopencv-dev'\n",
+        "    ]\n",
+        "\n",
+        "    installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "\n",
+        "    # \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5e93\n",
+        "    for library in libraries_to_install:\n",
+        "        if library == \"black[jupyter]\" and any(\"black\" in installed_library for installed_library in installed_libraries):\n",
+        "            print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "            continue\n",
+        "        elif not any(library in installed_library for installed_library in installed_libraries):\n",
+        "            !pip install $library\n",
+        "        else:\n",
+        "            print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "\n",
+        "    # \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
+        "    update_needed = False\n",
+        "    for tool in tools_to_install:\n",
+        "        exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "        if exit_code != 0:\n",
+        "            update_needed = True\n",
+        "            break\n",
+        "        else:\n",
+        "            print(f\"\u3010 {tool} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
+        "    if update_needed:\n",
+        "        !apt-get update\n",
+        "        for tool in tools_to_install:\n",
+        "            exit_code = subprocess.run([\"dpkg\", \"-s\", tool], capture_output=True).returncode\n",
+        "            if exit_code != 0:\n",
+        "                !apt-get install -y $tool"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9b89b056-a1f1-43e9-8158-79b924c9ac47",
+      "metadata": {},
+      "source": [
+        "### \u5b9e\u88c5pypatchmatch\u5e76\u5bfc\u5165\u8be5\u6a21\u5757\u8fdb\u884c\u68c0\u9a8c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c7b17e9a-c563-46d3-ad35-27ea064bb2cc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if not patchmatch_installed:\n",
+        "    \n",
+        "    import os\n",
+        "\n",
+        "    pkgconfig_dir='/usr/lib/x86_64-linux-gnu/pkgconfig/'\n",
+        "    if os.path.exists(pkgconfig_dir):\n",
+        "        !cd $pkgconfig_dir &&\\\n",
+        "        ln -sf opencv4.pc opencv.pc\n",
+        "\n",
+        "    #\u68c0\u67e5 opencv.pc \u662f\u5426\u6307\u5411 opencv4.pc\n",
+        "    opencv_pc_path = os.path.join(pkgconfig_dir,'opencv.pc')\n",
+        "    opencv_pc4_path = os.path.join(pkgconfig_dir,'opencv4.pc')\n",
+        "\n",
+        "    if os.path.realpath(opencv_pc_path)==opencv_pc4_path:\n",
+        "        print('opencv\u5305\u914d\u7f6e\u6587\u4ef6\u7684\u547d\u540d\u5df2\u4fee\u590d')\n",
+        "\n",
+        "    # \u6fc0\u6d3b invokeai \u7684\u73af\u5883\u5e76\u5b89\u88c5 pypatch\n",
+        "    install_pypatch_args = base_args[:] + [\n",
+        "        'pip install \"git+https://github.com/invoke-ai/PyPatchMatch@0.1.3#egg=pypatchmatch\"'\n",
+        "    ]\n",
+        "\n",
+        "    install_pypatch_cmd = (\" \").join(install_pypatch_args)\n",
+        "\n",
+        "    !$install_pypatch_cmd\n",
+        "\n",
+        "    check_installed_args = base_args[:] + [\n",
+        "        'python -c \"from patchmatch import patch_match\"'\n",
+        "    ]\n",
+        "\n",
+        "    check_installed_cmd = (\" \").join(check_installed_args)\n",
+        "\n",
+        "    !$check_installed_cmd"
       ]
     },
     {
@@ -149,13 +290,6 @@
       "outputs": [],
       "source": [
         "invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
-        "\n",
-        "base_args = [\n",
-        "    proxy,'&&',\n",
-        "    'source activate','&&',\n",
-        "    'conda activate invokeai','&&',\n",
-        "    f'cd {invokeai_dir}','&&'\n",
-        "]\n",
         "\n",
         "git_pull_args = base_args[:] + ['git pull']\n",
         "git_pull_cmd = (\" \").join(git_pull_args)\n",
@@ -188,42 +322,6 @@
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
         "!$final_cmd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "655ec450-2c79-4ce1-9ece-8909341313f9",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "git_info=!$proxy &&\\\n",
-        "source activate &&\\\n",
-        "conda activate invokeai &&\\\n",
-        "cd $invokeai_dir &&\\\n",
-        "git pull\n",
-        "\n",
-        "if 'Already up to date.' in git_info:\n",
-        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\u7684\uff0c\u76f4\u63a5\u542f\u52a8')\n",
-        "    !$proxy &&\\\n",
-        "    source activate &&\\\n",
-        "    conda activate invokeai &&\\\n",
-        "    cd $invokeai_dir &&\\\n",
-        "    python scripts/invoke.py \\\n",
-        "    --web \\\n",
-        "    --port 6006 \\\n",
-        "    --outdir /root/autodl-nas/invoke_outputs\n",
-        "else:\n",
-        "    !$proxy &&\\\n",
-        "    source activate &&\\\n",
-        "    conda activate invokeai &&\\\n",
-        "    cd $invokeai_dir &&\\\n",
-        "    conda env update &&\\\n",
-        "    python scripts/configure_invokeai.py -y --skip-sd-weights &&\\\n",
-        "    python scripts/invoke.py \\\n",
-        "    --web \\\n",
-        "    --port 6006 \\\n",
-        "    --outdir /root/autodl-nas/invoke_outputs\n"
       ]
     },
     {
@@ -289,24 +387,6 @@
         "#         print('\u6b63\u51c6\u5907\u5b89\u88c5')\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "c7e1df55-5fdb-4688-8448-f1208e072b19",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!conda env list"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "16749a38-69a3-4bd7-bafc-d6783e23da64",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
