add invokeai.init configer

--- a/ipynb/invokeai/OneClick-install-invokeai.ipynb
+++ b/ipynb/invokeai/OneClick-install-invokeai.ipynb
@@ -276,6 +276,64 @@
     },
     {
       "cell_type": "markdown",
+      "id": "75d12f8c-7c03-4886-a14b-fff1d776d642",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-hammer\"></i> \u914d\u7f6einvokeai.init\u6587\u4ef6\n",
+        "\u901a\u8fc7\u4fee\u6539\u8fd9\u91cc\u7684\u53c2\u6570\u6765\u81ea\u5b9a\u4e49invokeai\u7684\u914d\u7f6e\uff0c\u5982\u4fee\u6539--outdir\u6765\u6539\u53d8invokeai\u751f\u6210\u7684\u76ee\u6807\u8def\u5f84\uff0c\u4fee\u6539--port\u6765\u4fee\u6539\u8fd0\u884c\u7aef\u53e3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "37ad8837-7369-46ff-bf24-e2c2b64e00cb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "def add_line(lines, line_to_add):\n",
+        "    # \u5982\u679c\u5bf9\u5e94\u7684\u53c2\u6570\u548c\u6587\u672c\u4e0d\u5b58\u5728\uff0c\u5728\u6587\u4ef6\u672b\u5c3e\u589e\u52a0\u4e00\u884c\n",
+        "    if not any(line.strip() == f'{line_to_add}' for line in lines):\n",
+        "        lines.append(f'{line_to_add}\\n')\n",
+        "\n",
+        "invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "\n",
+        "# \u8bfb\u53d6\u6587\u4ef6\n",
+        "with open(invokeai_init_path, 'r') as f:\n",
+        "    lines = f.readlines()\n",
+        "\n",
+        "# \u8fdb\u884c\u6587\u672c\u66ff\u6362\n",
+        "for i, line in enumerate(lines):\n",
+        "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
+        "\n",
+        "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
+        "add_line(lines,'--port=6006')\n",
+        "add_line(lines,'--web')\n",
+        "\n",
+        "# \u53bb\u9664\u91cd\u590d\u7684\u884c\n",
+        "seen = {}\n",
+        "result = []\n",
+        "for line in lines:\n",
+        "    if line in seen:\n",
+        "        continue\n",
+        "    seen[line] = True\n",
+        "    result.append(line)\n",
+        "\n",
+        "lines = result\n",
+        "    \n",
+        "# \u53bb\u9664\u91cd\u590d\u7684\u884c\uff0c\u4f46\u662f\u8fd9\u79cd\u505a\u6cd5\u4f1a\u5bfc\u81f4\u884c\u5e8f\u6253\u4e71\n",
+        "# lines = list(set(lines))\n",
+        "\n",
+        "# \u5c06\u4fee\u6539\u540e\u7684\u5185\u5bb9\u5199\u56de\u6587\u4ef6\n",
+        "with open('/root/invokeai/invokeai.init', 'w') as f:\n",
+        "    f.writelines(lines)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "49b8e8fc-db10-47f4-b73c-49d72243bde7",
       "metadata": {},
       "source": [
@@ -289,8 +347,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "invoke_outputs_dir='/root/autodl-nas/invoke_outputs'\n",
-        "\n",
         "git_pull_args = base_args[:] + ['git pull']\n",
         "git_pull_cmd = (\" \").join(git_pull_args)\n",
         "\n",
@@ -315,10 +371,7 @@
         "final_args = base_args[:]\n",
         "final_args += [\n",
         "    'python scripts/invoke.py',\n",
-        "    '--web',\n",
-        "    '--port 6006',\n",
-        "    f'--outdir {invoke_outputs_dir}'\n",
-        "    ]\n",
+        "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
         "!$final_cmd"
