--- a/ipynb/invokeai/OneClick-launch-invokeai.ipynb
+++ b/ipynb/invokeai/OneClick-launch-invokeai.ipynb
@@ -73,6 +73,65 @@
     },
     {
       "cell_type": "markdown",
+      "id": "2daff019-2706-46e2-a87d-3cec853978a3",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-hammer\"></i> \u914d\u7f6einvokeai.init\u6587\u4ef6\n",
+        "\u901a\u8fc7\u4fee\u6539\u8fd9\u91cc\u7684\u53c2\u6570\u6765\u81ea\u5b9a\u4e49invokeai\u7684\u914d\u7f6e\uff0c\u5728\u542f\u52a8invokeai\u7684\u65f6\u5019\u4f1a\u4f20\u5165\u5bf9\u5e94\u7684\u53c2\u6570\uff0c\u5982\u4fee\u6539--outdir\u6765\u6539\u53d8invokeai\u751f\u6210\u7684\u76ee\u6807\u8def\u5f84\uff0c\u4fee\u6539--port\u6765\u4fee\u6539\u8fd0\u884c\u7aef\u53e3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c7d882c0-ad8c-4130-87b3-e1af72b5f997",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "invoke_outputs_dir = '/root/autodl-nas/invoke_outputs'\n",
+        "port = 6006\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "def add_line(lines, line_to_add):\n",
+        "    # \u5982\u679c\u5bf9\u5e94\u7684\u53c2\u6570\u548c\u6587\u672c\u4e0d\u5b58\u5728\uff0c\u5728\u6587\u4ef6\u672b\u5c3e\u589e\u52a0\u4e00\u884c\n",
+        "    if not any(line.strip() == f'{line_to_add}' for line in lines):\n",
+        "        lines.append(f'{line_to_add}\\n')\n",
+        "\n",
+        "invokeai_init_path='/root/invokeai/invokeai.init'\n",
+        "\n",
+        "# \u8bfb\u53d6\u6587\u4ef6\n",
+        "with open(invokeai_init_path, 'r') as f:\n",
+        "    lines = f.readlines()\n",
+        "\n",
+        "# \u8fdb\u884c\u6587\u672c\u66ff\u6362\n",
+        "for i, line in enumerate(lines):\n",
+        "    lines[i] = re.sub(r'--outdir=\"(.*)\"', f'--outdir=\"{invoke_outputs_dir}\"', line)\n",
+        "\n",
+        "#\u8ffd\u52a0\u989d\u5916\u7684\u53c2\u6570\n",
+        "add_line(lines,f'--port={port}') #\u8bbe\u5b9a\u7aef\u53e3\n",
+        "add_line(lines,'--web') #\u4ee5webui\u7684\u5f62\u5f0f\u542f\u52a8\n",
+        "\n",
+        "# \u53bb\u9664\u91cd\u590d\u7684\u884c\n",
+        "seen = {}\n",
+        "result = []\n",
+        "for line in lines:\n",
+        "    if line in seen:\n",
+        "        continue\n",
+        "    seen[line] = True\n",
+        "    result.append(line)\n",
+        "\n",
+        "lines = result\n",
+        "    \n",
+        "# \u53bb\u9664\u91cd\u590d\u7684\u884c\uff0c\u4f46\u662f\u8fd9\u79cd\u505a\u6cd5\u4f1a\u5bfc\u81f4\u884c\u5e8f\u6253\u4e71\n",
+        "# lines = list(set(lines))\n",
+        "\n",
+        "# \u5c06\u4fee\u6539\u540e\u7684\u5185\u5bb9\u5199\u56de\u6587\u4ef6\n",
+        "with open('/root/invokeai/invokeai.init', 'w') as f:\n",
+        "    f.writelines(lines)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "88fe77d4-54c8-49d6-89d4-c5fb1d27fad7",
       "metadata": {},
       "source": [
@@ -112,7 +171,7 @@
         "        'python scripts/configure_invokeai.py -y --skip-sd-weights'\n",
         "    ])\n",
         "else:\n",
-        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\u7684\uff0c\u76f4\u63a5\u542f\u52a8')\n",
+        "    print('\u5df2\u7ecf\u66f4\u65b0\u5230\u6700\u65b0\uff0c\u76f4\u63a5\u542f\u52a8')\n",
         "    \n",
         "'''\n",
         "\u5728 Python \u4e2d\uff0c\u53ef\u4ee5\u4f7f\u7528\u4ee5\u4e0b\u51e0\u79cd\u65b9\u6cd5\u6765\u62fc\u63a5\u4e24\u4e2a\u5217\u8868\uff1a\n",
@@ -124,14 +183,19 @@
         "final_args = base_args[:]\n",
         "final_args += [\n",
         "    'python scripts/invoke.py',\n",
-        "    '--web',\n",
-        "    '--port 6006',\n",
-        "    f'--outdir {invoke_outputs_dir}'\n",
-        "    ]\n",
+        "]\n",
         "\n",
         "final_cmd = (\" \").join(final_args)\n",
         "!$final_cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9f2cb222-a298-4581-9c38-97db20dc0e98",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
